<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/page_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page"
    tools:context="com.cky.foodorder.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            />
        <TextView
            android:gravity="center"
            android:id="@+id/sloganTxt"
            android:text="@string/slogonTxt"
            android:textColor="@android:color/white"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <Button
            android:id="@+id/btnSignUp"
            android:background="@drawable/btn_sign_up"
            android:text="@string/sign_up_txt"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:color="@color/btnSignUp"

            />
        <Button
            android:id="@+id/btnSignIn"
            android:background="@drawable/btn_sign_in"
            android:text="@string/sign_in_txt"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            />

    </LinearLayout>

</RelativeLayout>
